--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "Yan Rivera & Michael Aman",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
